@startuml

title __AUDIOSYSTEMS's Class Diagram__\n

  package sample {
    package sample.collections {
      class AudioSystemService {
      }
    }
  }
  

  package sample {
    class Controller {
    }
  }
  

  package sample {
    package sample.models {
      class Customer {
      }
    }
  }
  

  package sample {
    package sample.models {
      class Device {
      }
    }
  }
  

  package sample {
    package sample.models {
      class InvalidFieldValueException {
      }
    }
  }
  

  package sample {
    class Main {
    }
  }
  

  package sample {
    package sample.collections {
      class MySqlCustomerRepository {
      }
    }
  }
  

  package sample {
    package sample.collections {
      class MySqlDeviceRepository {
      }
    }
  }
  

  package sample {
    package sample.collections {
      class MySqlProductRepository {
      }
    }
  }
  

  package sample {
    package sample.models {
      class Product {
      }
    }
  }
  

  package sample {
    package sample.collections {
      interface Repository {
      }
    }
  }
  

  Controller o-- AudioSystemService : service
  Main -up-|> Application
  MySqlCustomerRepository -up-|> Repository
  MySqlDeviceRepository -up-|> Repository
  MySqlProductRepository -up-|> Repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
